# WQV-Viewer

./: .gitignore  Dockerfile  MANUAL_TRAINER.md  MANUAL_VIEWER.md  README.md  pyproject.toml  readme_wqv_docker.md  readme_wqv_docker.me  temp_check.py
docker/: entrypoint.sh
docs/: index.html
models/realesrgan/: realesr-animevideov3.pth
tests/: test_gui_smoke.py  test_parser.py  test_trainer_monochrome.py  test_upscaling.py
tests/data/: 000.40.8151044.pdr  001.40.8151041.pdr
tools/WQVColor_v22/: WQVColor.prc  manual.txt  readme.txt
tools/wqvlinkpalm11/: WQVLink.prc  manual.txt  readme.txt
wqv_upscale_trainer/: __init__.py  __main__.py  cli.py  config.py  data.py  models.py  train.py
wqv_viewer/: __init__.py  __main__.py  exporter.py  gui.py  parser.py  pipeline.py  upscaling.py
wqv_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
